<resources>
    <string name="app_name">First App</string>
    <string name="saluta">My App</string>
    <string name="esempio1">Saluta</string>
    <string name="esempio2">Gioco Alto e Basso</string>
    <string name="accell">Accellerometro</string>
    <string name="tris">Gioco del tris</string>
    <string name="forza4">Gioco forza 4</string>
    <string name="batnav">Gioco battaglia navale</string>
    <string name="camera">Fotocamera</string>

    <!-- alto e basso -->
    <string name="title_activity_alto_basso">Alto &amp; Basso</string>
    <string name="dummy_button">Esci</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="inserisci_numero">Inserisci un numero da 0 a 100</string>
    <string name="esito_numero">esito</string>


    <!-- ACC ACTIVITY-->
    <string name="titolo_acc">ACCELLEROMETRO</string>
    <string name="sens_x">X</string>
    <string name="sens_y">Y</string>
    <string name="sens_z">Z</string>

    <!--TRIS ACTIVITY-->
    <string name="lineOr">_</string>
    <string name="titleTris">Tris</string>
    <string name="turni">Turno di</string>
    <string name="play">Play</string>
    <string name="reset">Reset Gioco</string>

    <string name="title_activity_cam">CamActivity</string>

    <!--Forza 4 Activity-->
    <string name="forza">Forza 4</string>

    <!--Battaglia Navale-->
    <string name="bat">Battaglia Navale</string>
    <string name="io">IO</string>


</resources>
