<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtSaluta"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:height="50dp"
                android:padding="15dp"
                android:text="@string/saluta"
                android:textAlignment="center"
                android:textColor="@color/colorRed"
                android:textSize="30sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/btnSaluta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esempio1" />

            <Button
                android:id="@+id/btnAltoBasso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esempio2"

                />

            <Button
                android:id="@+id/btnAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/accell" />

            <Button
                android:id="@+id/btnTris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tris" />

            <Button
                android:id="@+id/btnForza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forza4" />

            <Button
                android:id="@+id/btnBatnav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batnav" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>