<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrisActivity">

    <LinearLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLGray"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTit"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:height="50dp"
            android:padding="15dp"
            android:text="@string/titleTris"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTurniTris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:padding="15dp"
            android:text="@string/turniTris" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/lineOr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>